<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/colored_bar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingTop="8dp"
            android:paddingBottom="11dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_circular"
            android:src="@drawable/baseline_report_problem_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_laporan_keluhan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/laporan_keluhan"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_report_id"
            app:layout_constraintStart_toEndOf="@id/colored_bar"
            app:layout_constraintTop_toTopOf="@id/colored_bar"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/tv_report_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/reportid"
            android:textColor="@color/gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@id/colored_bar"
            app:layout_constraintStart_toEndOf="@id/colored_bar"
            app:layout_constraintTop_toBottomOf="@+id/tv_laporan_keluhan"
            tools:ignore="SmallSp" />


        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/item_date"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/colored_bar"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_status_rounded"
            android:backgroundTint="#aaaaaa"
            android:clickable="false"
            android:minHeight="22dp"
            android:minWidth="80dp"
            android:text="@string/status"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@id/colored_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

        <View
            android:id="@+id/separator_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#f4f4f4"
            app:layout_constraintTop_toBottomOf="@id/colored_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <ImageView
            android:id="@+id/iv_truck"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_baseline_local_shipping_24"
            app:layout_constraintTop_toBottomOf="@id/separator_1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_vehicle_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehiclename"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_truck"
            app:layout_constraintBottom_toBottomOf="@id/iv_truck"
            app:layout_constraintTop_toTopOf="@id/iv_truck"
            android:layout_marginStart="12dp" />

        <ImageView
            android:id="@+id/iv_person"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_constraintTop_toBottomOf="@id/iv_truck"
            android:src="@drawable/ic_baseline_person_24"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_reportBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/reportby"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/iv_person"
            app:layout_constraintBottom_toBottomOf="@id/iv_person"
            app:layout_constraintStart_toEndOf="@id/iv_person"
            android:layout_marginStart="12dp"/>

        <TextView
            android:id="@+id/tv_no_pol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_truck"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/no_pol"
            android:layout_marginEnd="16dp"
            android:textColor="#aaaaaa"
            app:layout_constraintBottom_toBottomOf="@id/iv_truck"
            android:background="@drawable/shape_rounded_no_pol"/>

        <View
            android:id="@+id/separator_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#f4f4f4"
            app:layout_constraintTop_toBottomOf="@id/iv_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <ImageView
            android:id="@+id/iv_note"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_constraintTop_toBottomOf="@id/separator_2"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/baseline_assignment_24"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_catatan_keluhan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/catatan_keluhan"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_note"
            app:layout_constraintTop_toTopOf="@id/iv_note"
            android:layout_marginStart="8dp"/>
        
        <TextView
            android:id="@+id/tv_keluhan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            app:layout_constraintTop_toBottomOf="@id/tv_catatan_keluhan"
            app:layout_constraintStart_toStartOf="@id/tv_catatan_keluhan"
            app:layout_constraintEnd_toStartOf="@id/iv_photo"
            android:layout_marginEnd="16dp"
            android:text="@string/lorem_ipsum" />

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_baseline_image_24"
            android:backgroundTint="@color/gray"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator_2"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            tools:ignore="ContentDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>