<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    tools:context=".ui.main.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="-10dp"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >
            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="153dp"
                android:layout_height="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_icon_long"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="16dp"
                tools:ignore="ContentDescription" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_baseline_search_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:fabCustomSize="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#f5f5f5"
                app:borderWidth="0dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_laporan_keluhan_kendaraan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_icon"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/laporan_keluhan_kendaraan"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_laporan_keluhan_kendaraan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/full_name"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_top"
        app:layout_constraintBottom_toTopOf="@id/cv_bottom"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_laporan_keluhan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/item_list_laporan_keluhan"/>

        <ProgressBar
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/loading"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_add_laporan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/buat_laporan_keluhan_baru"
            android:textStyle="bold"
            android:background="@drawable/shape_rounded_button" />
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>